--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,7 +62,7 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0
 
 			
 			/* 
@@ -71,8 +71,9 @@
 			turn it around! 
 			*/
 			function update() {
+			
+				moveBoxTo(positionX)
 				
-
 			};
 
 			/* 
